syntax = "proto3";

package passport.sdk.user.v1;

option go_package = "github.com/ryanreadbooks/whimer/passport/sdk/user/v1";

message UserInfo {
  uint64 uid = 1;
  string nickname = 2;
  string avatar = 3;
  string style_sign = 4;
  string gender = 5;
}

message BatchGetUserRequest { repeated uint64 uids = 1; }

message BatchGetUserResponse { map<string, UserInfo> users = 1; }

message GetUserRequest { uint64 uid = 1; }

message GetUserResponse { UserInfo user = 1; }

service UserService {
  // 批量获取用户信息
  rpc BatchGetUser(BatchGetUserRequest) returns (BatchGetUserResponse);
  // 获取用户信息
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}
